--- a/core/pom.xml
+++ b/core/pom.xml
@@ -20,7 +20,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>io.opil.gjf</groupId>
+    <groupId>io.opil</groupId>
     <artifactId>google-java-format-parent</artifactId>
   <version>HEAD-SNAPSHOT</version>
   </parent>
