--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>io.opil.gjf</groupId>
+  <groupId>io.opil</groupId>
   <artifactId>google-java-format-parent</artifactId>
   <packaging>pom</packaging>
   <version>HEAD-SNAPSHOT</version>
@@ -35,14 +35,7 @@
     A Java source code formatter that follows Google Java Style.
   </description>
 
-  <url>https://github.com/google/google-java-format</url>
-
-  <inceptionYear>2015</inceptionYear>
-
-  <organization>
-    <name>Google Inc.</name>
-    <url>http://www.google.com/</url>
-  </organization>
+  <url>https://github.com/figroc/google-java-format</url>
 
   <licenses>
     <license>
@@ -54,29 +47,27 @@
 
   <developers>
     <developer>
-      <id>jdd</id>
-      <name>John DeTreville</name>
-      <email>jdd@google.com</email>
-      <organization>Google Inc.</organization>
-      <organizationUrl>http://www.google.com/</organizationUrl>
+      <id>figroc</id>
+      <name>P Chen</name>
+      <email>figroc@gmail.com</email>
       <roles>
         <role>owner</role>
         <role>developer</role>
       </roles>
-      <timezone>-8</timezone>
+      <timezone>+8</timezone>
     </developer>
   </developers>
 
   <scm>
-    <url>http://github.com/google/google-java-format/</url>
-    <connection>scm:git:git://github.com/google/google-java-format.git</connection>
-    <developerConnection>scm:git:ssh://git@github.com/google/google-java-format.git</developerConnection>
+    <url>http://github.com/figroc/google-java-format/</url>
+    <connection>scm:git:git://github.com/figroc/google-java-format.git</connection>
+    <developerConnection>scm:git:ssh://git@github.com/figroc/google-java-format.git</developerConnection>
     <tag>HEAD</tag>
   </scm>
 
   <issueManagement>
     <system>GitHub Issues</system>
-    <url>http://github.com/google/google-java-format/issues</url>
+    <url>http://github.com/figroc/google-java-format/issues</url>
   </issueManagement>
 
   <prerequisites>
