--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,10 +17,10 @@ name: CI
 on:
   push:
     branches:
-    - modified
+      - modified
   pull_request:
     branches:
-    - modified
+      - modified
 
 jobs:
   test:
@@ -57,33 +57,7 @@ jobs:
         with:
           java-version: ${{ matrix.java }}
           distribution: 'zulu'
-          cache: 'maven'
-      - name: 'Install'
-        shell: bash
-        run: mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+          cache: 'gradle'
       - name: 'Test'
         shell: bash
-        run: mvn test -B
-
-  publish:
-    name: 'Publish snapshots'
-    needs: test
-    if: github.event_name == 'push' && github.repository == 'figroc/google-java-format' && github.ref == 'refs/heads/modified'
-    runs-on: ubuntu-latest
-    steps:
-      - name: 'Check out repository'
-        uses: actions/checkout@v2
-      - name: 'Set up JDK 15'
-        uses: actions/setup-java@v2
-        with:
-          java-version: 15
-          distribution: 'zulu'
-          cache: 'maven'
-          server-id: sonatype-nexus-snapshots
-          server-username: CI_DEPLOY_USERNAME
-          server-password: CI_DEPLOY_PASSWORD
-      - name: 'Publish'
-        env:
-          CI_DEPLOY_USERNAME: ${{ secrets.CI_DEPLOY_USERNAME }}
-          CI_DEPLOY_PASSWORD: ${{ secrets.CI_DEPLOY_PASSWORD }}
-        run: mvn source:jar deploy -B -DskipTests=true -Dinvoker.skip=true -Dmaven.javadoc.skip=true
+        run: gradle test
