--- a/build.gradle
+++ b/build.gradle
@@ -121,13 +121,13 @@ publishing {
                     }
                 }
                 scm {
-                    url = "http://github.com/figroc/google-java-format/"
+                    url = "https://github.com/figroc/google-java-format"
                     connection = "scm:git:git://github.com/figroc/google-java-format.git"
                     developerConnection = "scm:git:ssh://git@github.com/figroc/google-java-format.git"
                 }
                 issueManagement {
                     system = "GitHub Issues"
-                    url = "http://github.com/figroc/google-java-format/issues"
+                    url = "https://github.com/figroc/google-java-format/issues"
                 }
             }
         }
