--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ ext {
     truthVersion = "1.1.3"
     compileTestVer = "0.19"
 
+    modulePackage = "com.google.googlejavaformat"
     compilerExports = ["api", "file", "main", "parser", "tree", "util"]
     compilerOptions = compilerExports.plus("code").collect {
         "--add-exports=jdk.compiler/com.sun.tools.javac.${it}=ALL-UNNAMED"
@@ -50,12 +51,13 @@ dependencies {
 }
 
 application {
-    mainClass = "com.google.googlejavaformat.java.Main"
+    mainClass = "${modulePackage}.java.Main"
 }
 
 jar {
     manifest {
         attributes (
+            "Automatic-Module-Name": modulePackage,
             "Add-Exports": compilerExports.plus(["model", "processing"])
                 .collect { "jdk.compiler/com.sun.tools.javac.${it}" }.join(" "),
             "Add-Opens": ["code", "comp"]
